@@ -1,3 +1,18 @@
+/*
+ * Copyright 2021 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.github.mdc.tasks.executor;
 
 import java.io.ByteArrayOutputStream;
@@ -16,7 +31,6 @@ import com.github.mdc.common.ApplicationTask.TaskType;
 import com.github.mdc.common.BlocksLocation;
 import com.github.mdc.common.Context;
 import com.github.mdc.common.HeartBeatTaskScheduler;
-import com.github.mdc.common.MDCConstants;
 import com.github.mdc.common.RemoteDataFetcher;
 
 public class TaskExecutorMapperCombiner implements Runnable {
@@ -34,33 +48,31 @@ public class TaskExecutorMapperCombiner implements Runnable {
 	String taskid;
 	SnappyInputStream datastream;
 	int port;
-	@SuppressWarnings({ "rawtypes" })
-	public TaskExecutorMapperCombiner(BlocksLocation blockslocation,SnappyInputStream datastream,String applicationid, String taskid,
-			ClassLoader cl,int port,
+
+	@SuppressWarnings({"rawtypes"})
+	public TaskExecutorMapperCombiner(BlocksLocation blockslocation, SnappyInputStream datastream, String applicationid, String taskid,
+			ClassLoader cl, int port,
 			HeartBeatTaskScheduler hbts) throws Exception {
 		this.blockslocation = blockslocation;
 		this.datastream = datastream;
 		this.port = port;
 		Class<?> clz = null;
 		try {
-			if(blockslocation.mapperclasses!=null) {
-				for(var mapperclass:blockslocation.mapperclasses) {
+			if (blockslocation.getMapperclasses() != null) {
+				for (var mapperclass :blockslocation.getMapperclasses()) {
 					clz = cl.loadClass(mapperclass);
-					cm.add((Mapper) clz.newInstance());
+					cm.add((Mapper) clz.getDeclaredConstructor().newInstance());
 				}
 			}
-			if(blockslocation.combinerclasses!=null) {
-				for(var combinerclass:blockslocation.combinerclasses) {
+			if (blockslocation.getCombinerclasses() != null) {
+				for (var combinerclass :blockslocation.getCombinerclasses()) {
 					clz = cl.loadClass(combinerclass);
-					cc.add((Combiner) clz.newInstance());
+					cc.add((Combiner) clz.getDeclaredConstructor().newInstance());
 				}
 			}
 		}
-		catch(Throwable ex) {
-			log.debug("Exception in loading class:",ex);
-		}
-		finally {
-			
+		catch (Throwable ex) {
+			log.debug("Exception in loading class:", ex);
 		}
 		this.applicationid = applicationid;
 		this.taskid = taskid;
@@ -73,12 +85,12 @@ public class TaskExecutorMapperCombiner implements Runnable {
 
 		try {
 			hbts.pingOnce(taskid, TaskStatus.SUBMITTED, TaskType.MAPPERCOMBINER, null);
-			
+
 			var mdcmc = new MapperCombinerExecutor(blockslocation, datastream, cm, cc);
 			hbts.pingOnce(taskid, TaskStatus.RUNNING, TaskType.MAPPERCOMBINER, null);
 			var fc = es.submit(mdcmc);
 			ctx = fc.get();
-			RemoteDataFetcher.writerIntermediatePhaseOutputToDFS(ctx, applicationid, ((applicationid+taskid)));
+			RemoteDataFetcher.writerIntermediatePhaseOutputToDFS(ctx, applicationid, (applicationid + taskid));
 			ctx = null;
 			hbts.pingOnce(taskid, TaskStatus.COMPLETED, TaskType.MAPPERCOMBINER, null);
 		} catch (Throwable ex) {
@@ -88,11 +100,11 @@ public class TaskExecutorMapperCombiner implements Runnable {
 				ex.printStackTrace(failuremessage);
 				hbts.pingOnce(taskid, TaskStatus.FAILED, TaskType.MAPPERCOMBINER, new String(baos.toByteArray()));
 			} catch (Exception e) {
-				log.info("Exception in Sending message to Failed Task: "+blockslocation,ex);
+				log.info("Exception in Sending message to Failed Task: " + blockslocation, ex);
 			}
-			log.info("Exception in Executing Task: "+blockslocation,ex);
+			log.info("Exception in Executing Task: " + blockslocation, ex);
 		} finally {
-			if(es!=null) {
+			if (es != null) {
 				es.shutdown();
 			}
 		}
@@ -101,5 +113,5 @@ public class TaskExecutorMapperCombiner implements Runnable {
 	public HeartBeatTaskScheduler getHbts() {
 		return hbts;
 	}
-	
+
 }
